fix license on Forge classes