@@ -1,3 +1,8 @@
+/*
+ * Copyright (c) Forge Development LLC and contributors
+ * SPDX-License-Identifier: LGPL-2.1-only
+ */
+
 package net.minecraftforge.server.command;
 
 import com.mojang.brigadier.StringReader;
@@ -13,7 +18,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 public class ModIdArgument implements ArgumentType<String> {
     private static final List<String> EXAMPLES = Arrays.asList("forge", "inventorysorter");
@@ -29,7 +33,8 @@ public class ModIdArgument implements ArgumentType<String> {
 
     @Override
     public <S> CompletableFuture<Suggestions> listSuggestions(final CommandContext<S> context, final SuggestionsBuilder builder) {
-        return SharedSuggestionProvider.suggest(FabricLoader.getInstance().getAllMods().stream().map(container -> container.getMetadata().getId()).collect(Collectors.toList()), builder);
+        // Forge Config API Port: get all mod ids on Fabric
+        return SharedSuggestionProvider.suggest(FabricLoader.getInstance().getAllMods().stream().map(container -> container.getMetadata().getId()).toList(), builder);
     }
 
     @Override
@@ -37,4 +42,3 @@ public class ModIdArgument implements ArgumentType<String> {
         return EXAMPLES;
     }
 }
-
